--- a/back/package.json
+++ b/back/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
+    "stripe": "^14.18.0",
     "zod": "^3.22.4"
   }
 }
