--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.5.0",
+    "@stripe/stripe-js": "^3.0.5",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
