--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.1",
+    "sonner": "^1.4.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
