--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^2.5.0",
     "@stripe/stripe-js": "^3.0.5",
+    "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
+    "query-string": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
