--- a/front/package.json
+++ b/front/package.json
@@ -15,11 +15,14 @@
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
+    "leaflet": "^1.9.4",
     "query-string": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.1",
+    "socket.io-client": "^4.7.4",
     "sonner": "^1.4.1",
     "zustand": "^4.5.1"
   },
